tests/negative/rename_main.lu
require "godot"
require_relative "rename_old"

class RenameMainDependency
  ICON = preload("res://rename_icon.tres")

  def icon
    return load("res://rename_icon.tres")
  end
end
